--- a/src/sphinx/theme/layout.html
+++ b/src/sphinx/theme/layout.html
@@ -1,6 +1,20 @@
 {# adapted from agogo/layout.html #}
 {% extends "basic/layout.html" %}
+{%- block extrahead %}
+<script type="text/javascript">
+if(window.location.host == 'slick.typesafe.com'){
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-23127719-3']);
+  _gaq.push(['_trackPageview']);
 
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();  
+}
+</script>
+{% endblock %}
 {% block header %}
     <div class="header-wrapper">
       <div class="header">
