Various documentation improvements for 2.1
- Remove all references to slick-examples and point to the Activator
  templates instead.

- To reduce the maintenance burden, external samples are not tied to the
  minor version or qualifier anymore. We now have 5 official Activator
  templates which are all linked from the manual. We link to the major
  release branches which can be updated independently when we release
  new minor versions. Activator templates have to be published
  separately for different major versions (because Activator does not
  support versioning yet) but multiple versions can live in different
  branches of the same repository.

- Populate the previously empty Index page.

- Add a Compatibility Policy section.

- Move the search box to the top (where people expect it) and remove the
  accompanying text (which refers to Python-specific concepts).

- Change “documentation” to “manual” in the title (short enough to
  prevent overflow with SNAPSHOT versions).

Fixes #603.

--- a/src/sphinx/theme/layout.html
+++ b/src/sphinx/theme/layout.html
@@ -32,7 +32,7 @@ if(window.location.host == 'slick.typesafe.com'){
           {%- if logo %}
             <span class="logo"><img class="logo" src="{{ pathto('_static/' + logo, 1) }}" alt="Slick"/></span>
           {%- endif %}
-          {{ version|e }} documentation
+          {{ release|e }} manual
         </a></div>
         {%- endblock %}
        </div>
@@ -48,22 +48,19 @@ if(window.location.host == 'slick.typesafe.com'){
           {%- endblock %}
         </div>
         <div class="sidebar">
-          {%- block sidebartoc %}
-          <h3>{{ _('Table Of Contents') }}</h3>
-          {{ toctree() }}
-          {%- endblock %}
           {%- block sidebarsearch %}
-          <h3 style="margin-top: 1.5em;">{{ _('Search') }}</h3>
+          <h3>{{ _('Search') }}</h3>
           <form class="search" action="{{ pathto('search') }}" method="get">
             <input type="text" name="q" />
             <input type="submit" value="{{ _('Go') }}" />
             <input type="hidden" name="check_keywords" value="yes" />
             <input type="hidden" name="area" value="default" />
           </form>
-          <p class="searchtip" style="font-size: 90%">
-            {{ _('Enter search terms or a module, class or function name.') }}
-          </p>
           {%- endblock %}
+            {%- block sidebartoc %}
+            <h3 style="margin-top: 1.5em;">{{ _('Table Of Contents') }}</h3>
+            {{ toctree() }}
+            {%- endblock %}
         </div>
         <div class="clearer"></div>
       </div>
